[gd_scene load_steps=8 format=3 uid="uid://g4u1i7l2d8h9p"]

[ext_resource type="Script" uid="uid://b6tfpphck20ef" path="res://scripts/UI/guild.gd" id="1_1kq8g"]
[ext_resource type="PackedScene" uid="uid://wyjiokspuqjw" path="res://Scenes/shaders_and_particles/candle_fire.tscn" id="3_e3jig"]
[ext_resource type="PackedScene" uid="uid://blg50faekwh8p" path="res://Scenes/ui/book_view.tscn" id="4_book"]
[ext_resource type="Texture2D" uid="uid://ckorh78mxu17p" path="res://assets/card_book/colection_background.png" id="5_bg"]
[ext_resource type="Script" path="res://scripts/UI/guild/quest_selector.gd" id="6_quest"]
[ext_resource type="Shader" path="res://assets/shaders/rounded_rect_clip.gdshader" id="7_round_shader"]

[sub_resource type="ShaderMaterial" id="1_round_mat"]
shader = ExtResource("7_round_shader")
shader_parameter/radius = 0.08
shader_parameter/aa = 0.01

[node name="Guild" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1kq8g")

[node name="CollectionBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_bg")
expand_mode = 2
stretch_mode = 3

[node name="CandleFire" parent="CollectionBackground" instance=ExtResource("3_e3jig")]
layout_mode = 0
offset_left = 247.0
offset_top = 185.0
offset_right = 294.0
offset_bottom = 205.0

[node name="CandleFire2" parent="CollectionBackground" instance=ExtResource("3_e3jig")]
layout_mode = 0
offset_left = 200.0
offset_top = 164.0
offset_right = 247.0
offset_bottom = 184.0

[node name="CandleFire4" parent="CollectionBackground" instance=ExtResource("3_e3jig")]
layout_mode = 0
offset_left = -14.000007
offset_top = 519.0
offset_right = 104.99999
offset_bottom = 547.0
scale = Vector2(1.81, 1.81)

[node name="CandleFire3" parent="CollectionBackground" instance=ExtResource("3_e3jig")]
layout_mode = 0
offset_left = 46.0
offset_top = 562.0
offset_right = 165.0
offset_bottom = 590.0
scale = Vector2(1.81, 1.81)

[node name="BookView" parent="." instance=ExtResource("4_book")]
visible = false
layout_mode = 1
closed_scale_multiplier = 0.32
open_center_offset = Vector2(-50, -150)
closed_front_offset = Vector2(-30, -280)
closed_back_offset = Vector2(-30, -300)
debug_book = true
perspective_top_inset_px = 0.0
perspective_top_drop_px = 0.0
perspective_top_tilt_px = 0.0
supported = false

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 24.0
offset_top = 16.0
offset_right = -24.0
offset_bottom = 64.0
grow_horizontal = 2
alignment = 1

[node name="PrevButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(90, 36)
layout_mode = 2
text = "Prev"

[node name="TitleLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(200, 36)
layout_mode = 2
text = "Guild"
horizontal_alignment = 1

[node name="PageLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(80, 36)
layout_mode = 2
text = "PÃƒÆ’Ã‚Â¡g. 1-2"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(90, 36)
layout_mode = 2
text = "Next"

[node name="UpgradesButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(110, 36)
layout_mode = 2
text = "Upgrades"

[node name="QuestButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 44)
layout_mode = 1
anchors_preset = 6
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -22.0
offset_right = 224.0
offset_bottom = 22.0
grow_horizontal = 0
grow_vertical = 2
text = "Quest Selection"

[node name="QuestSelectedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 24.0
offset_top = 30.0
offset_right = 324.0
offset_bottom = 58.0
grow_horizontal = 0
grow_vertical = 2
text = "Selected Quest: Forest"
theme_override_font_sizes/font_size = 18

[node name="QuestPopup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dimmer" type="ColorRect" parent="QuestPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="QuestPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -360.0
offset_right = 600.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="QuestPopup/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="QuestSelector" type="VBoxContainer" parent="QuestPopup/Panel/Content"]
layout_mode = 2
script = ExtResource("6_quest")

[node name="Row" type="HBoxContainer" parent="QuestPopup/Panel/Content/QuestSelector"]
layout_mode = 2
alignment = 1

[node name="LeftArrow" type="Button" parent="QuestPopup/Panel/Content/QuestSelector/Row"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
text = "←"
focus_mode = 2
theme_override_font_sizes/font_size = 28

[node name="QuestArt" type="TextureRect" parent="QuestPopup/Panel/Content/QuestSelector/Row"]
custom_minimum_size = Vector2(760, 440)
layout_mode = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5
material = SubResource("1_round_mat")

[node name="RightArrow" type="Button" parent="QuestPopup/Panel/Content/QuestSelector/Row"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
text = "→"
focus_mode = 2
theme_override_font_sizes/font_size = 28

[node name="QuestName" type="Label" parent="QuestPopup/Panel/Content/QuestSelector"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Forest"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 26

[node name="DifficultyRow" type="HBoxContainer" parent="QuestPopup/Panel/Content"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
alignment = 1

[node name="DifficultyLabel" type="Label" parent="QuestPopup/Panel/Content/DifficultyRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Difficulty"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 22

[node name="DifficultySpin" type="SpinBox" parent="QuestPopup/Panel/Content/DifficultyRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
min_value = 1.0
max_value = 6.0
step = 1.0
value = 1.0
allow_greater = false
allow_lesser = false
rounded = true

[node name="Spacer" type="Control" parent="QuestPopup/Panel/Content"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="QuestPopup/Panel/Content"]
custom_minimum_size = Vector2(140, 36)
layout_mode = 2
text = "Close"

[node name="SelectionPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 90.0
offset_right = -24.0
offset_bottom = 240.0
grow_horizontal = 2

[node name="SelectHeroLabel" type="Label" parent="SelectionPanel"]
custom_minimum_size = Vector2(240, 28)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.2, 0.2, 1)
text = "Select hero"
horizontal_alignment = 2

[node name="SelectEnemiesLabel" type="Label" parent="SelectionPanel"]
custom_minimum_size = Vector2(240, 28)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.2, 0.2, 1)
text = "Select enemies"
horizontal_alignment = 2

[node name="SelectionErrorLabel" type="Label" parent="SelectionPanel"]
custom_minimum_size = Vector2(240, 28)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.6, 0.2, 1)
horizontal_alignment = 2

[node name="ItemTypeDistribution" type="VBoxContainer" parent="SelectionPanel"]
custom_minimum_size = Vector2(240, 130)
layout_mode = 2

[node name="RowHelmet" type="HBoxContainer" parent="SelectionPanel/ItemTypeDistribution"]
layout_mode = 2

[node name="LabelHelmet" type="Label" parent="SelectionPanel/ItemTypeDistribution/RowHelmet"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "HELMET"

[node name="BarHelmet" type="ProgressBar" parent="SelectionPanel/ItemTypeDistribution/RowHelmet"]
custom_minimum_size = Vector2(150, 18)
layout_mode = 2

[node name="RowArmour" type="HBoxContainer" parent="SelectionPanel/ItemTypeDistribution"]
layout_mode = 2

[node name="LabelArmour" type="Label" parent="SelectionPanel/ItemTypeDistribution/RowArmour"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "ARMOUR"

[node name="BarArmour" type="ProgressBar" parent="SelectionPanel/ItemTypeDistribution/RowArmour"]
custom_minimum_size = Vector2(150, 18)
layout_mode = 2

[node name="RowGloves" type="HBoxContainer" parent="SelectionPanel/ItemTypeDistribution"]
layout_mode = 2

[node name="LabelGloves" type="Label" parent="SelectionPanel/ItemTypeDistribution/RowGloves"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "GLOVES"

[node name="BarGloves" type="ProgressBar" parent="SelectionPanel/ItemTypeDistribution/RowGloves"]
custom_minimum_size = Vector2(150, 18)
layout_mode = 2

[node name="RowBoots" type="HBoxContainer" parent="SelectionPanel/ItemTypeDistribution"]
layout_mode = 2

[node name="LabelBoots" type="Label" parent="SelectionPanel/ItemTypeDistribution/RowBoots"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "BOOTS"

[node name="BarBoots" type="ProgressBar" parent="SelectionPanel/ItemTypeDistribution/RowBoots"]
custom_minimum_size = Vector2(150, 18)
layout_mode = 2

[node name="RowOneHand" type="HBoxContainer" parent="SelectionPanel/ItemTypeDistribution"]
layout_mode = 2

[node name="LabelOneHand" type="Label" parent="SelectionPanel/ItemTypeDistribution/RowOneHand"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "ONE_HAND"

[node name="BarOneHand" type="ProgressBar" parent="SelectionPanel/ItemTypeDistribution/RowOneHand"]
custom_minimum_size = Vector2(150, 18)
layout_mode = 2

[node name="RowTwoHands" type="HBoxContainer" parent="SelectionPanel/ItemTypeDistribution"]
layout_mode = 2

[node name="LabelTwoHands" type="Label" parent="SelectionPanel/ItemTypeDistribution/RowTwoHands"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "TWO_HANDS"

[node name="BarTwoHands" type="ProgressBar" parent="SelectionPanel/ItemTypeDistribution/RowTwoHands"]
custom_minimum_size = Vector2(150, 18)
layout_mode = 2

[node name="StartDungeonButton" type="Button" parent="SelectionPanel"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
text = "Start Dungeon"

[node name="BackButton" type="Button" parent="SelectionPanel"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
text = "Back"

[node name="BoosterArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -260.0
offset_right = 264.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 0

[node name="BoosterList" type="VBoxContainer" parent="BoosterArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoosterPopup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dimmer" type="ColorRect" parent="BoosterPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.55)

[node name="Panel" type="Panel" parent="BoosterPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -180.0
offset_right = 220.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="BoosterPopup/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="BoosterPopup/Panel/Content"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
text = "Booster Pack"
horizontal_alignment = 1

[node name="Preview" type="ColorRect" parent="BoosterPopup/Panel/Content"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
color = Color(0.6, 0.85, 0.6, 1)

[node name="NameLabel" type="Label" parent="BoosterPopup/Panel/Content"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "Pack Name"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="BoosterPopup/Panel/Content"]
layout_mode = 2
alignment = 1

[node name="OpenButton" type="Button" parent="BoosterPopup/Panel/Content/Buttons"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
text = "Open"

[node name="BackButton" type="Button" parent="BoosterPopup/Panel/Content/Buttons"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
text = "Back"

[node name="OpenPackPopup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dimmer" type="ColorRect" parent="OpenPackPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.55)

[node name="Panel" type="Panel" parent="OpenPackPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -220.0
offset_right = 260.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="OpenPackPopup/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="OpenPackPopup/Panel/Content"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
text = "Open Pack"
horizontal_alignment = 1

[node name="CardsContainer" type="Control" parent="OpenPackPopup/Panel/Content"]
custom_minimum_size = Vector2(240, 240)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="OpenPackPopup/Panel/Content"]
layout_mode = 2
alignment = 1

[node name="AddAllButton" type="Button" parent="OpenPackPopup/Panel/Content/Buttons"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
text = "Add all"

[node name="BackButton" type="Button" parent="OpenPackPopup/Panel/Content/Buttons"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
text = "Back"

[node name="CardPopup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dimmer" type="ColorRect" parent="CardPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.55)

[node name="Panel" type="Panel" parent="CardPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -260.0
offset_right = 260.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="CardPopup/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CardContainer" type="Control" parent="CardPopup/Panel/Content"]
custom_minimum_size = Vector2(240, 260)
layout_mode = 2

[node name="CountLabel" type="Label" parent="CardPopup/Panel/Content"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
text = "x0"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="CardPopup/Panel/Content"]
layout_mode = 2
alignment = 1

[node name="UpgradeButton" type="Button" parent="CardPopup/Panel/Content/Buttons"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
text = "Upgrade (5)"

[node name="BackButton" type="Button" parent="CardPopup/Panel/Content/Buttons"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
text = "Back"
